# DSP-Project

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/cli/: main.cpp
bench/: ber_sweep.cpp
cmake/: emcastConfig.cmake.in
demo/: index.html
docs/: architecture.md  benchmarks.md  protocol.md
include/emcast/: analysis.hpp  channel.hpp  emcast.hpp  fec.hpp  frame.hpp  modem.hpp  types.hpp
src/: analysis.cpp  audio_channel.cpp  awgn.cpp  bfsk.cpp  crc32.cpp  emcast.cpp  frame.cpp  goertzel.cpp  impl_dr_wav.cpp  impl_miniaudio.cpp  impl_stb_image_write.cpp  mfsk.cpp  modem_common.cpp  modem_detail.hpp  ook.cpp  psk.cpp  reed_solomon.cpp  types.cpp  wav_channel.cpp
tests/: test_analysis.cpp  test_crc.cpp  test_frame.cpp  test_goertzel.cpp  test_reed_solomon.cpp  test_robustness.cpp  test_roundtrip.cpp  test_schemes.cpp
